more security config and bug fix